tests/typing/fail/instance_eval_class_fail2.rb

class A
 @x = 2
end

x = A.instance_eval do @x end

x.foo

